[tool.poetry]
name = "mujoco-env"
version = "0.1.0"
description = ""
authors = ["Brandon"]
readme = "README.md"
packages = [{include = "mujoco_env"}]

[tool.poetry.dependencies]
python = ">=3.10.1,<=3.10.12"
numpy = ">=1.23.5,<1.24.0"
scipy = "^1.15.3"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
pandas = "^2.3.0"
gymnasium = {version = "<=1.1", extras = ["accept-rom-license", "atari", "mujoco"]}
urllib3 = "<=2.0.0"
tqdm = "^4.67.1"
mlagents = "^1.1.0"
torch = {version = "2.4.1", source = "torch"}
torchvision = {version = "0.19.1", source = "torch"}
torchaudio = {version = "2.4.1", source = "torch"}
pettingzoo = "1.15"
ray = {extras = ["tune"], version = "^2.49.2"}
tree = "^0.2.4"
dm-tree = "^0.1.9"
lz4 = "^4.4.4"
gputil = "^1.4.0"
ipykernel = "^6.30.1"
python-motion-planning = "^1.1.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"


[[tool.poetry.source]]
name = "dgl"
url = "https://data.dgl.ai/wheels/torch-2.4/cu121/repo.html"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
